# dds

./: .gitignore  CMakeLists.txt  ChangeLog  Config.cmake.in  INSTALL  README.md
cmake/: FindGCD.cmake  FindPPL.cmake  FindTBB.cmake
doc/: CMakeLists.txt  dll-description.html  dll-description.md
examples/: AnalyseAllPlaysBin.cpp  AnalyseAllPlaysPBN.cpp  AnalysePlayBin.cpp  AnalysePlayPBN.cpp  CMakeLists.txt  CalcAllTables.cpp  CalcAllTablesPBN.cpp  CalcDDtable.cpp  CalcDDtablePBN.cpp  DealerPar.cpp  Par.cpp  README  SolveAllBoards.cpp  SolveBoard.cpp  SolveBoardPBN.cpp  hands.cpp  hands.h
include/: dll.h  portab.h
src/: ABstats.h  CMakeLists.txt  CalcTables.cpp  CalcTables.h  Exports.def  Init.cpp  Memory.cpp  Memory.h  Moves.cpp  Moves.h  PBN.h  Par.cpp  PlayAnalyser.cpp  PlayAnalyser.h  Scheduler.cpp  Scheduler.h  SolveBoard.cpp  SolveBoard.h  System.cpp  System.h  ThreadMgr.cpp  ThreadMgr.h  TimerList.h  TransTable.h  TransTableL.h  bit.h  dds.cpp  dds.h  dds.rc  debug.h.in  parallel.h
src/Makefiles/: Makefile_linux_shared
test/: CMakeLists.txt  TestTimer.cpp  TestTimer.h  args.cpp  args.h  compare.cpp  compare.h  cst.h  dtest.cpp  itest.cpp  loop.cpp  loop.h  parse.cpp  parse.h  print.cpp  print.h  test.cmake  testcommon.cpp  testcommon.h
